Update to apufferi v4.0.1
