# docs/swagger.yaml
@@ -42,7 +42,6 @@ definitions:
   apufferi.Server:
     properties:
       data:
-        $ref: '#/definitions/apufferi.Variables'
         type: object
       display:
         type: string
@@ -72,57 +71,6 @@ definitions:
       type:
         type: string
     type: object
-  apufferi.Variable:
-    properties:
-      desc:
-        type: string
-      display:
-        type: string
-      internal:
-        type: boolean
-      options:
-        items:
-          $ref: '#/definitions/apufferi.VariableOption'
-        type: array
-      required:
-        type: boolean
-      type:
-        type: string
-      userEdit:
-        type: boolean
-      value:
-        type: object
-    type: object
-  apufferi.VariableOption:
-    properties:
-      display:
-        type: string
-      value:
-        type: string
-    type: object
-  apufferi.Variables:
-    additionalProperties:
-      properties:
-        desc:
-          type: string
-        display:
-          type: string
-        internal:
-          type: boolean
-        options:
-          items:
-            $ref: '#/definitions/apufferi.VariableOption'
-          type: array
-        required:
-          type: boolean
-        type:
-          type: string
-        userEdit:
-          type: boolean
-        value:
-          type: object
-      type: object
-    type: object
   messages.FileDesc:
     properties:
       extension:
@@ -135,8 +83,6 @@ definitions:
         type: string
       size:
         type: integer
-    type: object
-  pufferd.Empty:
     type: object
   pufferd.PufferdRunning:
     properties:
@@ -151,7 +97,6 @@ definitions:
   pufferd.ServerDataAdmin:
     properties:
       data:
-        $ref: '#/definitions/apufferi.Variables'
         type: object
       display:
         type: string
@@ -198,6 +143,8 @@ definitions:
       memory:
         type: number
     type: object
+  response.Empty:
+    type: object
   response.Error:
     properties:
       error:
@@ -238,7 +185,7 @@ paths:
         "204":
           description: Service running
           schema:
-            $ref: '#/definitions/pufferd.Empty'
+            $ref: '#/definitions/response.Empty'
       summary: Is daemon up
   /server/{id}:
     delete:
@@ -257,7 +204,7 @@ paths:
         "204":
           description: Server deleted
           schema:
-            $ref: '#/definitions/pufferd.Empty'
+            $ref: '#/definitions/response.Empty'
         "400":
           description: Bad Request
           schema:
@@ -265,11 +212,11 @@ paths:
         "403":
           description: Forbidden
           schema:
-            $ref: '#/definitions/response.Error'
+            $ref: '#/definitions/response.Empty'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/response.Error'
+            $ref: '#/definitions/response.Empty'
         "500":
           description: Internal Server Error
           schema:
@@ -299,11 +246,11 @@ paths:
         "403":
           description: Forbidden
           schema:
-            $ref: '#/definitions/response.Error'
+            $ref: '#/definitions/response.Empty'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/response.Error'
+            $ref: '#/definitions/response.Empty'
         "500":
           description: Internal Server Error
           schema:
@@ -331,7 +278,7 @@ paths:
         "204":
           description: Server edited
           schema:
-            $ref: '#/definitions/pufferd.Empty'
+            $ref: '#/definitions/response.Empty'
         "400":
           description: Bad Request
           schema:
@@ -339,11 +286,11 @@ paths:
         "403":
           description: Forbidden
           schema:
-            $ref: '#/definitions/response.Error'
+            $ref: '#/definitions/response.Empty'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/response.Error'
+            $ref: '#/definitions/response.Empty'
         "500":
           description: Internal Server Error
           schema:
@@ -379,11 +326,11 @@ paths:
         "403":
           description: Forbidden
           schema:
-            $ref: '#/definitions/response.Error'
+            $ref: '#/definitions/response.Empty'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/response.Error'
+            $ref: '#/definitions/response.Empty'
         "500":
           description: Internal Server Error
           schema:
@@ -411,7 +358,7 @@ paths:
         "204":
           description: If file was deleted
           schema:
-            $ref: '#/definitions/pufferd.Empty'
+            $ref: '#/definitions/response.Empty'
         "400":
           description: Bad Request
           schema:
@@ -419,11 +366,11 @@ paths:
         "403":
           description: Forbidden
           schema:
-            $ref: '#/definitions/response.Error'
+            $ref: '#/definitions/response.Empty'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/response.Error'
+            $ref: '#/definitions/response.Empty'
         "500":
           description: Internal Server Error
           schema:
@@ -459,11 +406,11 @@ paths:
         "403":
           description: Forbidden
           schema:
-            $ref: '#/definitions/response.Error'
+            $ref: '#/definitions/response.Empty'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/response.Error'
+            $ref: '#/definitions/response.Empty'
         "500":
           description: Internal Server Error
           schema:
@@ -499,7 +446,7 @@ paths:
         "204":
           description: If file/folder was created
           schema:
-            $ref: '#/definitions/pufferd.Empty'
+            $ref: '#/definitions/response.Empty'
         "400":
           description: Bad Request
           schema:
@@ -507,11 +454,11 @@ paths:
         "403":
           description: Forbidden
           schema:
-            $ref: '#/definitions/response.Error'
+            $ref: '#/definitions/response.Empty'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/response.Error'
+            $ref: '#/definitions/response.Empty'
         "500":
           description: Internal Server Error
           schema:
@@ -540,7 +487,7 @@ paths:
         "204":
           description: If command was ran
           schema:
-            $ref: '#/definitions/pufferd.Empty'
+            $ref: '#/definitions/response.Empty'
         "400":
           description: Bad Request
           schema:
@@ -548,11 +495,11 @@ paths:
         "403":
           description: Forbidden
           schema:
-            $ref: '#/definitions/response.Error'
+            $ref: '#/definitions/response.Empty'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/response.Error'
+            $ref: '#/definitions/response.Empty'
         "500":
           description: Internal Server Error
           schema:
@@ -583,11 +530,11 @@ paths:
         "403":
           description: Forbidden
           schema:
-            $ref: '#/definitions/response.Error'
+            $ref: '#/definitions/response.Empty'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/response.Error'
+            $ref: '#/definitions/response.Empty'
         "500":
           description: Internal Server Error
           schema:
@@ -615,7 +562,7 @@ paths:
         "204":
           description: Server edited
           schema:
-            $ref: '#/definitions/pufferd.Empty'
+            $ref: '#/definitions/response.Empty'
         "400":
           description: Bad Request
           schema:
@@ -623,11 +570,11 @@ paths:
         "403":
           description: Forbidden
           schema:
-            $ref: '#/definitions/response.Error'
+            $ref: '#/definitions/response.Empty'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/response.Error'
+            $ref: '#/definitions/response.Empty'
         "500":
           description: Internal Server Error
           schema:
@@ -650,7 +597,7 @@ paths:
         "202":
           description: Install has been queued
           schema:
-            $ref: '#/definitions/pufferd.Empty'
+            $ref: '#/definitions/response.Empty'
         "400":
           description: Bad Request
           schema:
@@ -658,11 +605,11 @@ paths:
         "403":
           description: Forbidden
           schema:
-            $ref: '#/definitions/response.Error'
+            $ref: '#/definitions/response.Empty'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/response.Error'
+            $ref: '#/definitions/response.Empty'
         "500":
           description: Internal Server Error
           schema:
@@ -693,11 +640,11 @@ paths:
         "403":
           description: Forbidden
           schema:
-            $ref: '#/definitions/response.Error'
+            $ref: '#/definitions/response.Empty'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/response.Error'
+            $ref: '#/definitions/response.Empty'
         "500":
           description: Internal Server Error
           schema:
@@ -720,7 +667,7 @@ paths:
         "204":
           description: Reloaded server
           schema:
-            $ref: '#/definitions/pufferd.Empty'
+            $ref: '#/definitions/response.Empty'
         "400":
           description: Bad Request
           schema:
@@ -728,11 +675,11 @@ paths:
         "403":
           description: Forbidden
           schema:
-            $ref: '#/definitions/response.Error'
+            $ref: '#/definitions/response.Empty'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/response.Error'
+            $ref: '#/definitions/response.Empty'
         "500":
           description: Internal Server Error
           schema:
@@ -759,11 +706,11 @@ paths:
         "202":
           description: Start has been queued
           schema:
-            $ref: '#/definitions/pufferd.Empty'
+            $ref: '#/definitions/response.Empty'
         "204":
           description: Server started
           schema:
-            $ref: '#/definitions/pufferd.Empty'
+            $ref: '#/definitions/response.Empty'
         "400":
           description: Bad Request
           schema:
@@ -771,11 +718,11 @@ paths:
         "403":
           description: Forbidden
           schema:
-            $ref: '#/definitions/response.Error'
+            $ref: '#/definitions/response.Empty'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/response.Error'
+            $ref: '#/definitions/response.Empty'
         "500":
           description: Internal Server Error
           schema:
@@ -806,11 +753,11 @@ paths:
         "403":
           description: Forbidden
           schema:
-            $ref: '#/definitions/response.Error'
+            $ref: '#/definitions/response.Empty'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/response.Error'
+            $ref: '#/definitions/response.Empty'
         "500":
           description: Internal Server Error
           schema:
@@ -841,11 +788,11 @@ paths:
         "403":
           description: Forbidden
           schema:
-            $ref: '#/definitions/response.Error'
+            $ref: '#/definitions/response.Empty'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/response.Error'
+            $ref: '#/definitions/response.Empty'
         "500":
           description: Internal Server Error
           schema:
@@ -868,7 +815,7 @@ paths:
         "204":
           description: Server killed
           schema:
-            $ref: '#/definitions/pufferd.Empty'
+            $ref: '#/definitions/response.Empty'
         "400":
           description: Bad Request
           schema:
@@ -876,11 +823,11 @@ paths:
         "403":
           description: Forbidden
           schema:
-            $ref: '#/definitions/response.Error'
+            $ref: '#/definitions/response.Empty'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/response.Error'
+            $ref: '#/definitions/response.Empty'
         "500":
           description: Internal Server Error
           schema:
